2001-04-16  Adam Fedor  <fedor@gnu.org>

	* aclocal.m4: Detect the xm2-config script.

2001-04-14  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* configure.in: fixed fake main for 'new' FreeBSD targets.

2001-04-13  Adam Fedor  <fedor@gnu.org>

	* Source/GSFFCallInvocation.m (GSInvocationCallback): Generate
	an exception for an invalid selector.

2001-04-12  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSObjCRuntime: Revert to using class_pointer.
	* Headers/gnustep/base/objc-gnu2next.h: Redefine class_pointer.

2001-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSProcessInfo.m ([load]): Fixed single line change somehow
	missed from last patch.

2001-04-12  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSLock.h: Include thrmach.h if NeXT_RUNTIME.
	* Headers/gnustep/base/NSThread.h: Likewise.
	* Headers/gnustep/base/NSObjCRuntime: Include objc-gnu2next.h if
	NeXT_RUNTIME, use common objc functions for compatibility.
	* Headers/gnustep/base/objc-gnu2next.h: Update, simplify.
	* Headers/gnustep/base/thr-mach.h: New file
	* Source/thr-mach.m: New file
	* Source/GNUmakefile: Update to conditionally compile NeXT files

	* Documentation/gsdoc/NSRecursiveLock.gsdoc: Update.

2001-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: For efficiency, use _DefaultStringEncoding
	throughout, rather than calling +defaultCStringEncoding.  This is
	safe since the documentation explicitly states that the encoding
	cannot be changed programmatically ... so we don't have to worry
	about someone adding a category to change that.
	When converting data to/from strings, optimise to simple cString
	stuff if the specified encoding is the defautl encoding.
	Tidied some stuff to conform better to coding standards.
	* Source/Unicode.m GetDefEncoding(): prohibit UTF8 from being the
	default cString encoding ... the default cString encoding must
	consist of 7 or 8 bit characters, and must contain ASCII as a